--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="text" id="author" class="itext" name="author"><br>
             <label for="pages">Pages:</label>
             <input type="number" id="pages" class="itext" name="pages" min="1" max="15000"><br>
-            <label for="readed"> Readed?</label>
+            <label for="readed"> Read?</label>
             <label class="switch" id="rlabel">
               <input type="checkbox" id="readed">
     
