--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <input type="text" id="author" class="itext" name="author"><br>
             <label for="pages">Pages:</label>
             <input type="number" id="pages" class="itext" name="pages" min="1" max="15000"><br>
-            <label for="readed"> Read?</label>
+            <label for="read"> Read?</label>
             <label class="switch" id="rlabel">
-              <input type="checkbox" id="readed">
+              <input type="checkbox" id="read">
     
               <span class="slider round"></span>
             </label> <br>
