Added id and delete()
added delete function and a dinamic render as presupport for persistency

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Library</title>
   <meta charset="UTF-8"/> 
   <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -20,7 +22,7 @@
             <input type="number" id="pages" class="itext" name="pages" min="1" max="15000"><br>
             <label for="read"> Read?</label>
             <label class="switch" id="rlabel">
-              <input type="checkbox" id="read">
+              <input type="checkbox" id="read" >
     
               <span class="slider round"></span>
             </label> <br>
